syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup;
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service KeyManagerGrpcService {
  rpc send (KeyManagerGrpcRequest) returns (KeyManagerGrpcReply) {}
  rpc cadastrar (CadastrarChaveRequest) returns (CadastrarChaveResponse) {}
  rpc remover (RemoverChaveRequest) returns (google.protobuf.Empty);
}

message RemoverChaveRequest{
  string idChave = 1;
  string idCliente = 2;
}

enum TipoConta {
  TIPO_CONTA_DESCONHECIDO = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

enum TipoChave {
  TIPO_CHAVE_DESCONHECIDO = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

message CadastrarChaveRequest {
  string idCliente = 1;
  TipoChave tipoChave = 2;
  string chave = 3;
  TipoConta tipoConta = 4;
}

message CadastrarChaveResponse {
  string pixId = 1;
}

message KeyManagerGrpcRequest {
  string name = 1;
}

message KeyManagerGrpcReply {
  string message = 1;
}